--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,2 @@
-VITE_WEB_URL='http://localhost:4751'
-VITE_API_URL='ws://localhost:8082'
+VITE_WEB_URL='https://htmjapi.sudooom.com'
+VITE_API_URL='wss://chat.sudooom.com'
